// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WML semantic prettyPrint should indent nested elements 1`] = `
"<Asset key=(Test) fileName=\\"test\\">
    <Room key=(ABC)>
        <Name>Vortex</Name>
    </Room>
    <Room key=(VORTEX) global />
</Asset>"
`;

exports[`WML semantic prettyPrint should remove previous whitespace 1`] = `
"<Asset key=(Test) fileName=\\"test\\">
    <Room key=(ABC)>
        <Name>Vortex</Name>
        Multi-line description
    </Room>
    <Room key=(VORTEX) global />
</Asset>"
`;
